--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,4 +1,24 @@
 @import "./variables";
+
+@font-face {
+	font-family: "Nunito";
+	src: url("../fonts/Nunito.ttf");
+}
+
+body {
+	font-family: "Nunito";
+	font-weight: 400;
+	font-size: 16px;
+	line-height: 26px;
+
+	background-color: $background-color;
+}
+
+h1 {
+	font-size: 40px;
+	line-height: 40px;
+}
+
 @import "./components/header";
 @import "./components/hero";
 @import "./components/GET-block";
