--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -14,6 +14,7 @@
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
+	flex-wrap: wrap;
 
 	height: 60px;
 
@@ -31,6 +32,7 @@
 
 .header__buttons-block {
 	display: flex;
+	flex-wrap: wrap;
 }
 
 .header__button:not(:first-child) {
