--- a/src/sass/components/_GET-block.scss
+++ b/src/sass/components/_GET-block.scss
@@ -1,6 +1,7 @@
 .get-block {
 	display: flex;
 	flex-direction: column;
+	align-items: center;
 
 	margin-top: 140px;
 	padding: 0 16px;
@@ -63,4 +64,10 @@
 .get-block__user-phone {
 	color: #000;
 	text-decoration: none;
+}
+
+.get-block__button {
+	width: 120px;
+
+	margin-top: 50px;
 }
