--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -3,6 +3,7 @@ $background-color: #f8f8f8;
 
 $primary-color: #f4e041;
 $secondary-color: #00bdd3;
+$error-color: #cb3d40;
 
 // Button colors
 $button-color-hover: #ffe302;
