--- a/src/sass/components/_POST-block.scss
+++ b/src/sass/components/_POST-block.scss
@@ -4,6 +4,10 @@
 }
 
 .user-form {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+
 	margin-top: 50px;
 }
 
@@ -41,10 +45,6 @@
 	outline: none;
 }
 
-.user-form__field:invalid {
-	border: 1px solid red;
-}
-
 .user-form__title {
 	position: absolute;
 	left: 16px;
@@ -65,4 +65,26 @@
 	line-height: 14px;
 
 	transform: translateY(-28px);
+}
+
+.user-form__error {
+	position: absolute;
+	left: 16px;
+	bottom: -18px;
+
+	color: $error-color;
+	font-size: 12px;
+	line-height: 14px;
+}
+
+.user-form__error--hidden {
+	display: none;
+}
+
+.user-form__field-error {
+	border: 1px solid $error-color;
+}
+
+.user-form__title-error {
+	color: $error-color;
 }
