adds successful registration message

--- a/src/sass/components/_POST-block.scss
+++ b/src/sass/components/_POST-block.scss
@@ -215,3 +215,13 @@
 	margin: 0 auto;
 	margin-top: 50px;
 }
+
+.user-registered {
+	margin-top: 50px;
+}
+
+.user-registered__image {
+	width: 328px;
+
+	margin-top: 50px;
+}
