--- a/src/sass/components/_POST-block.scss
+++ b/src/sass/components/_POST-block.scss
@@ -116,6 +116,13 @@
 	}
 }
 
+.user-form__radio-position input {
+	width: 0;
+	height: 0;
+	margin: 0;
+	opacity: 0;
+}
+
 .user-form__radio-label {
 	margin-left: 32px;
 
@@ -135,20 +142,17 @@
 		background-color: $background-color;
 		border: 1px solid #d0cfcf;
 		border-radius: 100%;
-	}
-}
 
-.user-form__radio-position input {
-	width: 0;
-	height: 0;
-	margin: 0;
-	opacity: 0;
+		transition: all 250ms linear;
+	}
 }
 
 .user-form__radio-position input:checked + .user-form__radio-label::before {
 	background-color: #00bdd3;
 	box-shadow: inset 0 0 0 5px $background-color;
 	border: 1px solid #00bdd3;
+
+	transition: all 250ms linear;
 }
 
 /*
