--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -71,6 +71,7 @@ p {
 }
 
 //Import components styles
+@import "./components/loading";
 @import "./components/header";
 @import "./components/hero";
 @import "./components/GET-block";
