--- a/src/sass/components/_POST-block.scss
+++ b/src/sass/components/_POST-block.scss
@@ -4,10 +4,28 @@
 }
 
 .user-form {
+	position: relative;
+
 	display: flex;
 	flex-direction: column;
 
 	margin-top: 50px;
+}
+
+/* Sending animation */
+.post-block__sending {
+	position: absolute;
+
+	display: flex;
+	justify-content: center;
+	align-items: center;
+
+	width: 100%;
+	height: 100%;
+
+	background-color: rgba(248, 248, 248, 0.8);
+
+	z-index: 99;
 }
 
 /* 
