--- a/src/sass/components/_POST-block.scss
+++ b/src/sass/components/_POST-block.scss
@@ -15,6 +15,7 @@
 /* Sending animation */
 .post-block__sending {
 	position: absolute;
+	top: -20px;
 
 	display: flex;
 	justify-content: center;
@@ -22,6 +23,8 @@
 
 	width: 100%;
 	height: 100%;
+
+	padding: 20px 0;
 
 	background-color: rgba(248, 248, 248, 0.8);
 
@@ -234,6 +237,46 @@
 
 .user-form__photo-name--empty {
 	color: #7e7e7e;
+}
+
+/*
+
+	Error message
+
+*/
+
+.user-form__error-block {
+	display: flex;
+	flex-direction: row;
+	flex-wrap: nowrap;
+	justify-content: center;
+	align-items: center;
+
+	width: calc(100% - 2 * 10px);
+	height: 100%;
+
+	margin-top: 20px;
+	padding: 10px;
+
+	background-color: #f7d0d0;
+	border-radius: 8px;
+}
+
+.user-form__error-icon {
+	width: 48px;
+	height: 48px;
+
+	background-image: url("../../assets/warning.png");
+	background-size: contain;
+	background-repeat: no-repeat;
+	background-position: center;
+}
+
+.user-form__error-message {
+	margin-left: 20px;
+
+	color: $error-color;
+	line-height: 1.1;
 }
 
 /*
