--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -8,3 +8,6 @@ $error-color: #cb3d40;
 // Button colors
 $button-color-hover: #ffe302;
 $button-color-inactive: #b4b4b4;
+
+// Inputs width
+$input-width-mobile: 328px;
