--- a/src/sass/components/_POST-block.scss
+++ b/src/sass/components/_POST-block.scss
@@ -8,6 +8,7 @@
 
 	display: flex;
 	flex-direction: column;
+	align-items: center;
 
 	margin-top: 50px;
 }
@@ -51,7 +52,7 @@
 }
 
 .user-form__field {
-	width: 328px;
+	width: $input-width-mobile;
 	height: 54px;
 
 	margin: 0;
@@ -122,6 +123,8 @@
 */
 
 .user-form__position-block {
+	width: $input-width-mobile;
+
 	margin-top: 43px;
 }
 
@@ -252,11 +255,10 @@
 	justify-content: center;
 	align-items: center;
 
-	width: calc(100% - 2 * 10px);
-	height: 100%;
+	width: $input-width-mobile;
 
 	margin-top: 20px;
-	padding: 10px;
+	// padding: 10px;
 
 	background-color: #f7d0d0;
 	border-radius: 8px;
@@ -266,6 +268,8 @@
 	width: 48px;
 	height: 48px;
 
+	margin-left: 10px;
+
 	background-image: url("../../assets/warning.png");
 	background-size: contain;
 	background-repeat: no-repeat;
@@ -273,7 +277,8 @@
 }
 
 .user-form__error-message {
-	margin-left: 20px;
+	margin-left: 10px;
+	padding: 10px;
 
 	color: $error-color;
 	line-height: 1.1;
