adds style for tablet

--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -21,6 +21,10 @@
 	padding: 0 16px;
 
 	background-color: #fff;
+
+	@media screen and (min-width: 768px) {
+		padding: 0 32px;
+	}
 }
 
 .header__logo {
