--- a/src/sass/components/_GET-block.scss
+++ b/src/sass/components/_GET-block.scss
@@ -2,24 +2,35 @@
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+	justify-content: center;
 
 	margin-top: 140px;
 	padding: 0 16px;
+
+	@media screen and (min-width: 768px) {
+		padding: 0 32px;
+	}
 }
 
 .get-block__users-list {
 	display: flex;
 	flex-direction: column;
-	align-items: center;
+	flex-wrap: wrap;
+	align-items: flex-start;
 
-	width: 100%;
+	width: 328px;
 
 	margin: 0;
 	margin-top: 50px;
 	padding: 0;
-	gap: 20px;
 
 	list-style: none;
+
+	@media screen and (min-width: 768px) {
+		flex-direction: row;
+
+		width: 704px;
+	}
 }
 
 .get-block__user {
@@ -31,10 +42,19 @@
 	height: calc(254px - 2 * 20px);
 
 	margin: 0;
+	margin-bottom: 20px;
 	padding: 20px;
 
 	background-color: #fff;
 	border-radius: 10px;
+
+	@media screen and (min-width: 768px) {
+		width: calc(344px - 2 * 20px);
+
+		&:nth-child(2n + 1) {
+			margin-right: 16px;
+		}
+	}
 }
 
 .get-block-user-avatar {
@@ -51,6 +71,10 @@
 	overflow: hidden;
 	text-overflow: ellipsis;
 	white-space: nowrap;
+
+	@media screen and (min-width: 768px) {
+		max-width: calc(344px - 2 * 20px);
+	}
 }
 
 .get-block__user-name {
@@ -70,5 +94,5 @@
 .get-block__button {
 	width: 120px;
 
-	margin-top: 50px;
+	margin-top: 30px;
 }
