--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -11,3 +11,9 @@ $button-color-inactive: #b4b4b4;
 
 // Inputs width
 $input-width-mobile: 328px;
+
+// Screens width
+$width-screen-mobile: 360px;
+$width-screen-tablet: 768px;
+$width-screen-desktop: 1024px;
+$width-screen-desktop-2k: 2560px;
