--- a/src/sass/components/_GET-block.scss
+++ b/src/sass/components/_GET-block.scss
@@ -7,7 +7,7 @@
 	margin-top: 140px;
 	padding: 0 16px;
 
-	@media screen and (min-width: 768px) {
+	@media screen and (min-width: $width-screen-tablet) {
 		padding: 0 32px;
 	}
 }
@@ -26,7 +26,7 @@
 
 	list-style: none;
 
-	@media screen and (min-width: 768px) {
+	@media screen and (min-width: $width-screen-tablet) {
 		flex-direction: row;
 
 		width: 704px;
@@ -48,7 +48,7 @@
 	background-color: #fff;
 	border-radius: 10px;
 
-	@media screen and (min-width: 768px) {
+	@media screen and (min-width: $width-screen-tablet) {
 		width: calc(344px - 2 * 20px);
 
 		&:nth-child(2n + 1) {
@@ -72,7 +72,7 @@
 	text-overflow: ellipsis;
 	white-space: nowrap;
 
-	@media screen and (min-width: 768px) {
+	@media screen and (min-width: $width-screen-tablet) {
 		max-width: calc(344px - 2 * 20px);
 	}
 }
