--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -22,7 +22,7 @@
 
 	background-color: #fff;
 
-	@media screen and (min-width: 768px) {
+	@media screen and (min-width: $width-screen-tablet) {
 		padding: 0 32px;
 	}
 }
