--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -11,6 +11,7 @@ $button-color-inactive: #b4b4b4;
 
 // Inputs width
 $input-width-mobile: 328px;
+$input-width-tablet: 380px;
 
 // Screens width
 $width-screen-mobile: 360px;
