--- a/src/sass/components/_POST-block.scss
+++ b/src/sass/components/_POST-block.scss
@@ -1,6 +1,10 @@
 .post-block {
 	margin-top: 140px;
 	padding: 0 16px;
+
+	@media screen and (min-width: $width-screen-tablet) {
+		padding: 0 32px;
+	}
 }
 
 .user-form {
@@ -70,6 +74,10 @@
 	&:focus {
 		outline: none;
 	}
+
+	@media screen and (min-width: $width-screen-tablet) {
+		width: $input-width-tablet;
+	}
 }
 
 .user-form__title {
@@ -126,6 +134,10 @@
 	width: $input-width-mobile;
 
 	margin-top: 43px;
+
+	@media screen and (min-width: $width-screen-tablet) {
+		width: $input-width-tablet;
+	}
 }
 
 .user-form__radio-block {
@@ -262,6 +274,10 @@
 
 	background-color: #f7d0d0;
 	border-radius: 8px;
+
+	@media screen and (min-width: $width-screen-tablet) {
+		width: $input-width-tablet;
+	}
 }
 
 .user-form__error-icon {
@@ -302,11 +318,16 @@
 */
 
 .user-registered {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+
 	margin-top: 50px;
 }
 
 .user-registered__image {
-	width: 328px;
+	width: 100%;
+	max-width: 328px;
 
 	margin-top: 50px;
 }
