--- a/src/sass/components/_GET-block.scss
+++ b/src/sass/components/_GET-block.scss
@@ -36,7 +36,7 @@
 		width: 704px;
 	}
 
-	@media screen and (min-width: $width-screen-tablet) {
+	@media screen and (min-width: $width-screen-desktop) {
 		width: 904px;
 	}
 }
