--- a/src/sass/components/_POST-block.scss
+++ b/src/sass/components/_POST-block.scss
@@ -250,8 +250,16 @@
 	padding-right: 15px;
 
 	overflow: hidden;
-	text-overflow: ellipsis;
 	white-space: nowrap;
+}
+
+.user-form__photo-extension {
+	position: absolute;
+	right: 1px;
+
+	padding-right: 15px;
+
+	background-color: $background-color;
 }
 
 .user-form__photo-name--empty {
